# readdy

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  conanfile.py  environment.yml  pyproject.toml  setup.cfg  setup.py
examples/custom_integrator/: CMakeLists.txt  binding.cpp  integrator_example.py  setup.py
examples/custom_integrator/cmake/Modules/: FindREADDY.cmake
examples/custom_potential/: CMakeLists.txt  binding.cpp  potential_example.py  setup.py
examples/custom_potential/cmake/Modules/: FindREADDY.cmake
examples/scenarios/: CMakeLists.txt  Scenarios.h  main.cpp
kernels/: CMakeLists.txt
kernels/cpu/: CMakeLists.txt
kernels/cpu/src/: CPUKernel.cpp  CPUStateModel.cpp  Kernel.cpp  StateModel.cpp
kernels/cpu/src/actions/: CPUActionFactory.cpp  CPUCalculateForces.cpp  CPUCompartments.cpp  CPUEulerBDIntegrator.cpp  CPUEvaluateCompartments.cpp  CPUEvaluateTopologyReactions.cpp  CPUProgramFactory.cpp
kernels/cpu/src/data/: DefaultDataContainer.cpp  (+1 more)
kernels/cpu/test/: CMakeLists.txt  CPUTestKernel.cpp  CPUTestKernelStateModel.cpp  CPUTestMain.cpp  CPUTestNeighborList.cpp  CPUTestParallelizedGillespie.cpp  CPUTestReactions.cpp  TestBug.cpp  TestCellLinkedList.cpp  TestHilbertCurveIndexing.cpp  TestKernel.cpp  TestMain.cpp  TestNeighborList.cpp  TestNeighborList2.cpp  TestNeighborListIterator.cpp  TestParallelizedGillespie.cpp  TestParticleData.cpp  TestReactions.cpp
kernels/cpu_dense/: CMakeLists.txt
kernels/cpu_dense/src/: CPUDKernel.cpp  CPUDStateModel.cpp  Kernel.cpp  StateModel.cpp
kernels/cpu_dense/test/: CMakeLists.txt  TestMain.cpp  TestNeighborList.cpp  TestReactions.cpp
kernels/cpu_legacy/: CMakeLists.txt
kernels/cpu_legacy/src/: CPUKernel.cpp  CPULegacyKernel.cpp  CPUStateModel.cpp
kernels/cpu_legacy/test/: CMakeLists.txt  TestCellLinkedList.cpp  TestHilbertCurveIndexing.cpp  TestKernel.cpp  TestMain.cpp  TestNeighborList.cpp  TestNeighborListIterator.cpp  TestParallelizedGillespie.cpp  TestReactions.cpp
kernels/mpi/: CMakeLists.txt
kernels/mpi/src/: MPIActionFactory.cpp  MPIKernel.cpp  MPIObservableFactory.cpp  MPIParticleData.cpp  MPISession.cpp  MPIStateModel.cpp  Timer.cpp
kernels/mpi/test/: CMakeLists.txt  IntegrationTest.cpp  IntegrationTests.cpp  TestDiffusion.cpp  TestMain.cpp  TestPerformance.cpp  TestSetupMPI.cpp  TestSynchronization.cpp
kernels/singlecpu/: CMakeLists.txt  SingleCPUKernel.cpp  SingleCPUKernel.h  SingleCPUKernelStateModel.cpp  SingleCPUKernelStateModel.h  SingleCPUProgramFactory.cpp  SingleCPUProgramFactory.h
kernels/singlecpu/model/: SingleCPUParticleData.cpp  SingleCPUParticleData.h
kernels/singlecpu/potentials/: PotentialsOrder1.cpp  PotentialsOrder1.h
kernels/singlecpu/programs/: SingleCPUAddParticleProgram.cpp  SingleCPUAddParticleProgram.h  SingleCPUDiffuseProgram.cpp  SingleCPUDiffuseProgram.h  SingleCPUTestProgram.cpp  SingleCPUTestProgram.h
kernels/singlecpu/src/: SCPUActionFactory.cpp  SCPUKernel.cpp  SCPUProgramFactory.cpp  SCPUStateModel.cpp  SingleCPUKernel.cpp  SingleCPUKernelStateModel.cpp  SingleCPUProgramFactory.cpp
kernels/singlecpu/test/: CMakeLists.txt  SingleCPUTestKernelStateModel.cpp  SingleCPUTestMain.cpp  SingleCPUTestNeighborList.cpp  SingleCPUTestParticleData.cpp  SingleCPUTestReactions.cpp  TestFirstPassageTimeIntegrator.cpp  TestMain.cpp  TestNeighborList.cpp  TestParticleData.cpp  TestReactions.cpp
libraries/hilbert/: CMakeLists.txt
libraries/hilbert/src/: hilbert.c
readdy/examples/: CMakeLists.txt  DiffusionBenchmark.cpp
readdy/main/: CMakeLists.txt  Simulation.cpp
readdy/main/api/: KernelConfiguration.cpp
readdy/main/common/: CMakeLists.txt  Config.cpp  ReaDDyVec3.cpp  Timer.cpp  Utils.cpp  filesystem.cpp  logging.cpp
readdy/main/io/: BloscFilter.cpp  CMakeLists.txt  DataSet.cpp  File.cpp  IOUtils.cpp  Trajectory.cpp  blosc_filter.c  blosc_filter.h  blosc_plugin.c
readdy/main/model/: Actions.cpp  Aggregators.cpp  CMakeLists.txt  Compartments.cpp  Context.cpp  IOUtils.cpp  Kernel.cpp  KernelContext.cpp  KernelStateModel.cpp  Observables.cpp  Particle.cpp  ParticleTypeRegistry.cpp  Potentials.cpp  Programs.cpp  RandomProvider.cpp  Reactions.cpp  StateModel.cpp  Topology.cpp  Trajectory.cpp  Utils.cpp  Vec3.cpp
readdy/main/plugin/: CMakeLists.txt  KernelPluginDecorator.cpp  KernelProvider.cpp
readdy/test/: CMakeLists.txt  Graph.cpp  H5RD.cpp  IndexPersistentVector.cpp  IntegrationTests.cpp  TestAggregators.cpp  TestAlgorithms.cpp  TestBreakingBonds.cpp  TestCompareKernels.cpp  TestCompartments.cpp  TestContext.cpp  TestDetailedBalance.cpp  TestGeometries.cpp  TestIO.cpp  TestIndex.cpp  TestIndexPersistentVector.cpp  TestIntegration.cpp  TestKernelContext.cpp  TestMain.cpp  TestMatrix33.cpp  TestObservables.cpp  TestPerformance.cpp  TestPlugins.cpp  TestPotentials.cpp  TestReactions.cpp  TestSTRParser.cpp  TestSignals.cpp  TestSimulation.cpp  TestSimulationLoop.cpp  TestSimulationSchemes.cpp  TestStateModel.cpp  TestTimer.cpp  TestTopologies.cpp  TestTopologyGraphs.cpp  TestTopologyReactions.cpp  TestTopologyReactionsExternal.cpp  TestVec3.cpp  Vertex.cpp
readdy2/main/: CMakeLists.txt  Simulation.cpp  TestMain.cpp
readdy2/main/common/: CMakeLists.txt  RandomProvider.cpp  Utils.cpp
readdy2/main/io/: CMakeLists.txt  IOUtils.cpp  ReaDDy_IO.cpp  ReaDDy_IO.h
readdy2/main/model/: CMakeLists.txt  Kernel.cpp  KernelContext.cpp  KernelStateModel.cpp  ObservableFactory.cpp  Observables.cpp  Particle.cpp  Vec3.cpp
readdy2/main/plugin/: CMakeLists.txt  Kernel.cpp  KernelFactory.cpp  KernelPluginDecorator.cpp  KernelProvider.cpp  ObservableFactory.cpp  Observables.cpp  Plugin.cpp  Program.cpp  ProgramFactory.cpp
readdy2/test/: CMakeLists.txt  TestMain.cpp  TestObservables.cpp  TestPlugins.cpp  TestSimulation.cpp  TestTest.cpp
wrappers/python/: CMakeLists.txt  PySimulation.cpp  setup.py
wrappers/python/modules/: CMakeLists.txt  PotentialWrapper.cpp  PotentialWrapper.h  PySimulation.cpp  gil_lock.cpp  gil_lock.h  interpreter_lock.cpp  interpreter_lock.h
(+1020 files in other folders)
